--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,6 @@ h3 {
 }
 
 p,
-a,
 figcaption {
     font-family: work;
 }
@@ -136,7 +135,7 @@ main section.section--light {
 }
 
 main section.section--light article {
-    width: 70%;
+    width: 60%;
 }
 
 main section div.section__gallery {
@@ -164,3 +163,30 @@ main section.section--light iframe {
 /*######################################
                 FOOTER
 ######################################*/
+footer section.getInTouch {
+    background-color: var(--background-color-dark);
+    color: var(--font-color-light);
+    /* width: 100%; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 15vh 0
+}
+
+footer section.getInTouch article {
+    width: 40%;
+    padding: 0 5% 0 0
+}
+
+footer section.getInTouch article p {
+    padding: 0.6em 0;
+}
+
+footer section.getInTouch section.form form div {
+    padding: 0.6em 0;
+}
+
+footer section.getInTouch section.form form input,
+footer section.getInTouch section.form form textarea {
+    width: 100%;
+}
